// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyComponent should render Locked SettingsOverview 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <ScrollViewMock>
    <SettingsHeaderRow
      icon={
        <Icon
          allowFontScaling={false}
          color="#FFFFFF"
          name="user-o"
          size={31}
        />
      }
      text="Account: "
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#4A5157"
          name="ios-lock"
          size={31}
        />
      }
    />
    <SettingsRow
      disabled={true}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Change Password"
    />
    <SettingsRow
      disabled={true}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Change PIN"
    />
    <SettingsRow
      disabled={true}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Setup 2 Factor"
    />
    <SettingsRow
      disabled={true}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Set Up Password Recovery"
    />
    <SettingsHeaderRow
      icon={
        <Icon
          allowFontScaling={false}
          color="#FFFFFF"
          name="ios-options"
          size={31}
        />
      }
      text="Options"
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Exchange Settings"
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Spending Limits"
    />
    <SettingsLabelRow
      onPress={[Function]}
      right="Disabled"
      text="Auto Log Off After"
    />
    <SettingsLabelRow
      right=""
      text="Default Currency"
    />
    <SettingsSwitchRow
      onPress={[Function]}
      text="PIN Re-login"
      value={false}
    />
    <SettingsSwitchRow
      onPress={[Function]}
      text="Developer Mode"
    />
    <SettingsRow
      onPress={[Function]}
      text="Restore Wallets"
    />
    <SettingsRow
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Terms of Service"
    />
    <View
      style={
        Object {
          "marginBottom": 90,
          "padding": 32,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Send Logs
        </Text>
      </PrimaryButton>
    </View>
  </ScrollViewMock>
</SceneWrapper>
`;

exports[`MyComponent should render UnLocked SettingsOverview 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <ScrollViewMock>
    <SettingsHeaderRow
      icon={
        <Icon
          allowFontScaling={false}
          color="#FFFFFF"
          name="user-o"
          size={31}
        />
      }
      text="Account: "
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#4A5157"
          name="ios-unlock"
          size={31}
        />
      }
    />
    <SettingsRow
      disabled={false}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Change Password"
    />
    <SettingsRow
      disabled={false}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Change PIN"
    />
    <SettingsRow
      disabled={false}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Setup 2 Factor"
    />
    <SettingsRow
      disabled={false}
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Set Up Password Recovery"
    />
    <SettingsHeaderRow
      icon={
        <Icon
          allowFontScaling={false}
          color="#FFFFFF"
          name="ios-options"
          size={31}
        />
      }
      text="Options"
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Exchange Settings"
    />
    <SettingsRow
      onPress={[Function]}
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Spending Limits"
    />
    <SettingsLabelRow
      onPress={[Function]}
      right="Disabled"
      text="Auto Log Off After"
    />
    <SettingsLabelRow
      right=""
      text="Default Currency"
    />
    <SettingsSwitchRow
      onPress={[Function]}
      text="PIN Re-login"
      value={false}
    />
    <SettingsSwitchRow
      onPress={[Function]}
      text="Developer Mode"
    />
    <SettingsRow
      onPress={[Function]}
      text="Restore Wallets"
    />
    <SettingsRow
      right={
        <Icon
          allowFontScaling={false}
          color="#87939E"
          name="right"
          size={22}
        />
      }
      text="Terms of Service"
    />
    <View
      style={
        Object {
          "marginBottom": 90,
          "padding": 32,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Send Logs
        </Text>
      </PrimaryButton>
    </View>
  </ScrollViewMock>
</SceneWrapper>
`;
